@@ -1,4 +1,5 @@
 AC_PREREQ(2.12.1)
 AC_INIT(refcard.tex)
 AC_PROG_INSTALL
+AC_PROG_LN_S
 AC_OUTPUT(Makefile)
